test/libyul/yulSyntaxTests/objects/datasize_nonstring.yul
object "A" {
  code {
    pop(datasize(0))
  }
}
// ====
// bytecodeFormat: legacy
// ----
// TypeError 5859: (39-40): Function expects string literal.
